--- a/env.example
+++ b/env.example
@@ -24,6 +24,7 @@ WEATHER_LON=
 WEATHER_CITY=
 
 # Ollama LLM runtime
+OLLAMA_HOST_PORT=11434
 OLLAMA_BASE_URL=http://ollama:11434
 OLLAMA_MODEL=llama2
 
