feat: update HA plugin functionality Add support for MQTT, Matter, Zigbee Update Help and documentation

--- a/env.example
+++ b/env.example
@@ -32,6 +32,13 @@ OLLAMA_MODEL=llama2
 HOME_ASSISTANT_BASE_URL=http://homeassistant:8123
 HOME_ASSISTANT_TOKEN=
 
+# MQTT / IoT ingestion (optional; supports Zigbee2MQTT and Matter topics)
+MQTT_BROKER_URL=
+MQTT_BROKER_PORT=1883
+MQTT_USERNAME=
+MQTT_PASSWORD=
+MQTT_TOPICS=home-monitor/#,zigbee2mqtt/#,matter/#
+
 # Future sensor integrations
 GOVEE_API_KEY=
 ECOQUBE_API_TOKEN=
