--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     build:
       context: ./frontend
       args:
-        VITE_API_BASE_URL: ${VITE_API_BASE_URL}
+        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-http://localhost:8000/api}
         VITE_DEFAULT_OLLAMA_MODEL: ${VITE_DEFAULT_OLLAMA_MODEL}
     restart: unless-stopped
     depends_on:
