--- a/env.example
+++ b/env.example
@@ -4,6 +4,8 @@ DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,backend
 TIME_ZONE=UTC
 RECOMMENDATION_WINDOW_HOURS=6
+API_PORT=8000
+FRONTEND_PORT=3000
 
 # Database (PostgreSQL)
 POSTGRES_DB=home_monitor
