--- a/env.example
+++ b/env.example
@@ -6,6 +6,7 @@ TIME_ZONE=UTC
 RECOMMENDATION_WINDOW_HOURS=6
 API_PORT=8000
 FRONTEND_PORT=3000
+VITE_API_BASE_URL=http://127.0.0.1:8000/api
 
 # Database (PostgreSQL)
 POSTGRES_DB=home_monitor
